--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mime": "^1.3.4",
     "monk": "^1.0.1",
     "mustache": "^2.1.2",
+    "node-session": "0.0.1-alpha.2",
     "qs": "^4.0.0",
     "routes": "^2.1.0"
   }
